[package]
name = "certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
openssl = "0.10.38"
openssl-sys = "0.9.72"
rcgen = { version = "0.9.2", features = ["pem", "x509-parser"] }
time = { version = "0.3.7", features = ["local-offset"] }
